[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kotegawa-monitor"
version = "2.0"
description = "Free trading strategy monitor for Indian stocks"
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.3.0",
    "pandas==2.0.3",
    "numpy==1.24.3",
    "yfinance==0.2.32",
    "python-multipart==0.0.6",
]
